# dioxus_hotdog

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  flake.nix  fly.toml  zellij_layout.kdl
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
