[package]
name = "hot_dog"
version = "0.1.0"
authors = ["damccull <401104+damccull@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
reqwest = { version = "0.12.12",default-features = false, features = ["json","rustls-tls","charset","http2","macos-system-configuration"] }
rusqlite = {version = "0.32.1", optional = true}
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = "=0.2.97"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
